# Health-Insight-Agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  text.ipynb
public/db/: script.sql
src/: main.py
src/config/: prompts.py
src/service/: openai_service.py  supabase_service.py
src/ui/: home_page.py
src/utils/: pdf_extractor.py  validators.py
